# quality-docs-validator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  FINDINGS.md  MVP_SCOPE.md  ROADMAP.md
examples/: README.md  control-plan.xlsx  generate_examples.py  pfmea.xlsx  report.md
src/quality_docs_validator/: __init__.py  cli.py  models.py
src/quality_docs_validator/core/: __init__.py  matching.py  report.py  scoring.py
src/quality_docs_validator/modules/: __init__.py  pfmea_control_plan.py
src/quality_docs_validator/parsers/: __init__.py  excel.py
src/quality_docs_validator/rules/: __init__.py  pfmea_control_plan_rules.yaml
tests/: conftest.py  test_aliases.py  test_json_output.py  test_multi_sheet.py  test_parity.py  test_parser_edge_cases.py  test_pfmea_control_plan.py  test_rules_consistency.py  test_smoke.py
